--- a/package.json
+++ b/package.json
@@ -4,14 +4,24 @@
   "description": "As we now complete our MVC conversation, we can refactor our app to use good MVC separation of concerns.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Code Fellows",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.13.3",
+    "express": "^4.14.1",
     "express-request-proxy": "^2.0.0",
     "pg": "^6.1.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rrustia/13-deployments.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rrustia/13-deployments/issues"
+  },
+  "homepage": "https://github.com/rrustia/13-deployments#readme"
 }
